--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.89"
 clap = { version = "4.5.18", features = ["derive"] }
+crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
 env_logger = "0.11.5"
 log = "0.4.22"
