--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -11,4 +11,5 @@ clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
 env_logger = "0.11.5"
+gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
