--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -11,3 +11,4 @@ clap = { version = "4.5.18", features = ["derive"] }
 env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
+url = "2.5.3"
