--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 anyhow = "1.0.93"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-url = "2.5.3"
+url = { version = "2.5.3", features = ["serde"] }
