--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -13,3 +13,4 @@ ctrlc = "3.4.5"
 env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
+url = "2.5.3"
