--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -14,4 +14,5 @@ env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
 reqwest = "0.12.9"
+serde_json = "1.0.133"
 url = "2.5.3"
