--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -11,8 +11,9 @@ clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
 env_logger = "0.11.5"
+futures = "0.3.31"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
-reqwest = "0.12.9"
+reqwest = { version = "0.12.9", features = ["json"] }
 serde_json = "1.0.133"
 url = "2.5.3"
