--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -15,5 +15,6 @@ futures = "0.3.31"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 log = "0.4.22"
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
+serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
 url = "2.5.3"
