--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -10,5 +10,5 @@ anyhow = "1.0.89"
 clap = { version = "4.5.18", features = ["derive"] }
 env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
-log = "0.4.22"
+tracing = "0.1.40"
 url = "2.5.3"
