--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -11,4 +11,5 @@ clap = { version = "4.5.18", features = ["derive"] }
 env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 url = "2.5.3"
