--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -10,4 +10,6 @@ anyhow = "1.0.89"
 clap = { version = "4.5.18", features = ["derive"] }
 env_logger = "0.11.5"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
-log = "0.4.22"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+url = "2.5.3"
