--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
 env_logger = "0.11.5"
+exponential-backoff = "2.0.0"
 futures = "0.3.31"
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
