--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -16,3 +16,4 @@ tracing-subscriber = "0.3.18"
 url = "2.5.3"
 
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
+tracing-appender = "0.2.3"
