--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,11 @@
-workspace = { members = [ "gnosis-vpn","gnosis-vpn-ctl", "gnosis-vpn-lib"], resolver = "2" }
+[workspace]
+members = [ "gnosis-vpn","gnosis-vpn-ctl", "gnosis-vpn-lib"]
+resolver = "2"
+
+[workspace.dependencies]
+anyhow = "1.0.93"
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+url = { version = "2.5.3", features = ["serde"] }
