--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = {workspace = true}
 # use exclusively because it supports command chaining
 bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }
 gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
-libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
+libp2p-identity = {workspace = true}
 tracing = {workspace = true}
 tracing-appender = "0.2.3"
 tracing-subscriber = {workspace = true}
