--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = {workspace = true}
-libp2p-identity = {workspace = true}
-serde = {workspace = true}
-serde_json = {workspace = true}
-url = {workspace = true}
+anyhow = { workspace = true }
+libp2p-identity = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_with = { workspace = true }
+url = { workspace = true }
