--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ serde_with = { version = "3.11.0", features = ["base64"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.18"
 url = { version = "2.5.4", features = ["serde"] }
+
+gnosis-vpn-lib = { path = "gnosis-vpn-lib" }
