--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -11,7 +11,6 @@ clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
 exponential-backoff = "2.0.0"
-gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
 libp2p-identity = { workspace = true }
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
 serde = { workspace = true }
@@ -19,3 +18,5 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+
+gnosis-vpn-lib = { workspace = true }
