--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,15 @@
-workspace = { members = [ "gnosis-vpn","gnosis-vpn-ctl", "gnosis-vpn-lib"], resolver = "2" }
+[workspace]
+members = ["gnosis-vpn", "gnosis-vpn-ctl", "gnosis-vpn-lib"]
+resolver = "2"
+
+[workspace.dependencies]
+anyhow = "1.0.93"
+libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+serde_with = { version = "3.11.0", features = ["base64"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.18"
+url = { version = "2.5.4", features = ["serde"] }
+
+gnosis-vpn-lib = { path = "gnosis-vpn-lib" }
