--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.93"
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
-url = { version = "2.5.3", features = ["serde"] }
+anyhow = { workspace = true }
+libp2p-identity = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_with = { workspace = true }
+url = { workspace = true }
