--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -6,16 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.89"
+anyhow = { workspace = true }
 clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
-env_logger = "0.11.5"
-futures = "0.3.31"
-gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
+exponential-backoff = "2.0.0"
+libp2p-identity = { workspace = true }
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
-url = "2.5.3"
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+url = { workspace = true }
+
+gnosis-vpn-lib = { workspace = true }
