--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ members = ["gnosis-vpn", "gnosis-vpn-ctl", "gnosis-vpn-lib"]
 resolver = "2"
 
 [workspace.package]
-version= "0.1.0"
-edition = "0.2.0-a.1"
+version= "0.2.0-a.1"
+edition = "2021"
 
 
 [workspace.dependencies]
