--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -7,7 +7,7 @@ edition = { workspace = true }
 anyhow = { workspace = true }
 # use exclusively because it supports command chaining
 bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }
-gnosis-vpn-lib = { version = "0.1.0", path = "../gnosis-vpn-lib" }
+gnosis-vpn-lib = { path = "../gnosis-vpn-lib" }
 libp2p-identity = { workspace = true }
 tracing = { workspace = true }
 tracing-appender = "0.2.3"
