--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 members = ["gnosis-vpn", "gnosis-vpn-ctl", "gnosis-vpn-lib"]
 resolver = "2"
 
+[workspace.package]
+version= "0.2.0-a.1"
+edition = "2021"
+name="gnosis-vpn"
+
+
 [workspace.dependencies]
 anyhow = "1.0.93"
 libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
