using not debug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         USER: runner
 
     - name: Build
-      run: nix run .#gnosisvpn-debug
+      run: nix run .#gnosisvpn
 
     # - name: Format
     #   run: cargo fmt --check
