--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["gnosis-vpn", "gnosis-vpn-ctl", "gnosis-vpn-lib"]
 resolver = "2"
 
 [workspace.package]
-version= "0.2.0-a.1"
+version= "0.3.0"
 edition = "2021"
 name="gnosis-vpn"
 
