--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -10,5 +10,6 @@ libp2p-identity = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_with = { workspace = true }
+thiserror = "1.0.69"
 tracing = { workspace = true }
 url = { workspace = true }
