consolidated errors and better workspaces

--- a/gnosis-vpn-ctl/Cargo.toml
+++ b/gnosis-vpn-ctl/Cargo.toml
@@ -4,11 +4,11 @@ version = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-# use exclusively because it supports command chaining
-bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }
-gnosis-vpn-lib = { path = "../gnosis-vpn-lib" }
+gnosis-vpn-lib = { workspace = true }
 libp2p-identity = { workspace = true }
 tracing = { workspace = true }
-tracing-appender = "0.2.3"
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+
+# use exclusively because it supports command chaining
+bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }
