--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,17 +1,16 @@
 name: Build
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - main
     types:
       - opened
       - synchronize
+      - reopened
       - ready_for_review
-      - closed
+
+concurrency:
+  group: ${{ github.ref }}-build
+  cancel-in-progress: true
 
 env:
   CARGO_TERM_COLOR: always
