--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -94,7 +94,7 @@ jobs:
                   USER: runner
 
             - name: Build
-              run: echo nix build .#gnosisvpn-x86_64-darwin -L
+              run: echo nix build .#gnosisvpn-x86_64-darwin -L && echo "Dummy content" > results/bin/gnosis-vpn && echo "Dummy content" > results/bin/gnosis-vpn-ctl
 
             - name: Publish binary
               id: publish-binary
