--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -48,12 +48,13 @@ jobs:
             - name: Publish binary
               id: publish-binary
               run: |
+                set -x
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
                 echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/${pr_version}/aarch64-darwin/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/${pr_version}/aarch64-darwin/gnosis-vpn-ctl"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/latest/aarch64-darwin/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/latest/aarch64-darwin/gnosis-vpn-ctl"
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --package=gnosis-vpn-aarch64-darwin --version=${pr_version}
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --package=gnosis-vpn-ctl-aarch64-darwin --version=${pr_version}
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --package=gnosis-vpn-aarch64-darwin --version=latest
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --package=gnosis-vpn-ctl-aarch64-darwin --version=latest
 
             - name: Create comment
               uses: peter-evans/create-or-update-comment@v4
@@ -99,12 +100,13 @@ jobs:
             - name: Publish binary
               id: publish-binary
               run: |
+                set -x
                 pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
                 echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/${pr_version}/x86_64-darwin/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/${pr_version}/x86_64-darwin/gnosis-vpn-ctl" 
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/latest/x86_64-darwin/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/latest/x86_64-darwin/gnosis-vpn-ctl"
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --package=gnosis-vpn-x86_64-darwin --version=${pr_version}     --destination-path="${{ github.repository }}/${pr_version}/x86_64-darwin/gnosis-vpn"
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --package=gnosis-vpn-ctl-x86_64-darwin --version=${pr_version} --destination-path="${{ github.repository }}/${pr_version}/x86_64-darwin/gnosis-vpn-ctl"
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --package=gnosis-vpn-x86_64-darwin --version=latest            --destination-path="${{ github.repository }}/latest/x86_64-darwin/gnosis-vpn"
+                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --package=gnosis-vpn-ctl-x86_64-darwin --version=latest        --destination-path="${{ github.repository }}/latest/x86_64-darwin/gnosis-vpn-ctl"
 
             - name: Create comment
               uses: peter-evans/create-or-update-comment@v4
@@ -115,46 +117,47 @@ jobs:
                     - [Gnosis VPN](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/x86_64-darwin/gnosis-vpn)
                     - [Gnosis VPN CTL](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/x86_64-darwin/gnosis-vpn-ctl)
 
-    merge-linux:
-        name: Publish ${{ matrix.architecture }}
-        runs-on: self-hosted-hoprnet-bigger
-        strategy:
-            matrix:
-                architecture:
-                    - x86_64-linux
-                    - aarch64-linux
-                    - armv7l-linux
-        #if: github.event.pull_request.merged == true
+    # merge-linux:
+    #     name: Publish ${{ matrix.architecture }}
+    #     runs-on: self-hosted-hoprnet-bigger
+    #     strategy:
+    #         matrix:
+    #             architecture:
+    #                 - x86_64-linux
+    #                 - aarch64-linux
+    #                 - armv7l-linux
+    #     #if: github.event.pull_request.merged == true
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    #     steps:
+    #         - name: Checkout repository
+    #           uses: actions/checkout@v4
 
-            - name: Setup GCP
-              id: gcp
-              uses: hoprnet/hopr-workflows/actions/setup-gcp@master
-              with:
-                  google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
-                  install-sdk: 'true'
+    #         - name: Setup GCP
+    #           id: gcp
+    #           uses: hoprnet/hopr-workflows/actions/setup-gcp@master
+    #           with:
+    #               google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
+    #               install-sdk: 'true'
 
-            - name: Build
-              run: nix build .#gnosisvpn-${{ matrix.architecture }} -L
+    #         - name: Build
+    #           run: nix build .#gnosisvpn-${{ matrix.architecture }} -L
 
-            - name: Publish binary
-              id: publish-binary
-              run: |
-                pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
-                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/${pr_version}/${{ matrix.architecture }}/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/${pr_version}/${{ matrix.architecture }}/gnosis-vpn-ctl" 
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --path="${{ github.repository }}/latest/${{ matrix.architecture }}/gnosis-vpn"
-                gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --path="${{ github.repository }}/latest/${{ matrix.architecture }}/gnosis-vpn-ctl"
+    #         - name: Publish binary
+    #           id: publish-binary
+    #           run: |
+    #             set -x
+    #             pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
+    #             echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+    #             gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --destination-path="${{ github.repository }}/${pr_version}/${{ matrix.architecture }}/gnosis-vpn"
+    #             gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --destination-path="${{ github.repository }}/${pr_version}/${{ matrix.architecture }}/gnosis-vpn-ctl" 
+    #             gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn     --destination-path="${{ github.repository }}/latest/${{ matrix.architecture }}/gnosis-vpn"
+    #             gcloud artifacts generic upload --repository="rust-binaries" --location="europe-west3" --source=results/bin/gnosis-vpn-ctl --destination-path="${{ github.repository }}/latest/${{ matrix.architecture }}/gnosis-vpn-ctl"
 
-            - name: Create comment
-              uses: peter-evans/create-or-update-comment@v4
-              with:
-                issue-number: ${{ github.event.pull_request.number }}
-                body: |
-                    The ${{ matrix.architecture }} binaries for this PR can be downloaded from:
-                    - [Gnosis VPN](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/${{ matrix.architecture }}/gnosis-vpn)
-                    - [Gnosis VPN CTL](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/${{ matrix.architecture }}/gnosis-vpn-ctl)
+    #         - name: Create comment
+    #           uses: peter-evans/create-or-update-comment@v4
+    #           with:
+    #             issue-number: ${{ github.event.pull_request.number }}
+    #             body: |
+    #                 The ${{ matrix.architecture }} binaries for this PR can be downloaded from:
+    #                 - [Gnosis VPN](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/${{ matrix.architecture }}/gnosis-vpn)
+    #                 - [Gnosis VPN CTL](https://europe-west3-artifactregistry.googleapis.com/v1/projects/hoprassociation/locations/europe-west3/repositories/rust-binaries/files/${{ github.repository }}/${{ steps.publish-binary.outputs.pr_version}}/${{ matrix.architecture }}/gnosis-vpn-ctl)
