--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -13,9 +13,35 @@ concurrency:
     cancel-in-progress: false
 
 jobs:
+    delete-artifacts:
+        name: Delete artifacts
+        runs-on: self-hosted-hoprnet-small
+        #if: github.event.pull_request.merged == true
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Setup GCP
+              id: gcp
+              uses: hoprnet/hopr-workflows/actions/setup-gcp@master
+              with:
+                  google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
+                  install-sdk: 'true'
+
+            - name: Delete artifacts
+              run: |
+                set -x
+                pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
+                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
+                gcloud config set artifacts/location europe-west3
+                gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis-vpn ${pr_version}  2> /dev/null || true
+                gcloud artifacts versions delete --quiet --repository="rust-binaries" --package=gnosis-vpn-ctl ${pr_version}  2> /dev/null || true
+
     merge-aarch64-darwin:
         name: Publish aarch64-darwin
         runs-on: macos-14
+        needs: delete-artifacts
         #if: github.event.pull_request.merged == true
 
         steps:
@@ -58,25 +84,13 @@ jobs:
                 mv results/bin/gnosis-vpn results/bin/gnosis-vpn-aarch64-darwin
                 mv results/bin/gnosis-vpn-ctl results/bin/gnosis-vpn-ctl-aarch64-darwin
                 gcloud config set artifacts/location europe-west3
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn:${pr_version}:gnosis-vpn-aarch64-darwin 2> /dev/null || true
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn-ctl:${pr_version}:gnosis-vpn-ctl-aarch64-darwin 2> /dev/null || true
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn     --source=results/bin/gnosis-vpn-aarch64-darwin
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn-ctl --source=results/bin/gnosis-vpn-ctl-aarch64-darwin
-
-            - name: Create comment
-              uses: peter-evans/create-or-update-comment@v4
-              with:
-                issue-number: ${{ github.event.pull_request.number }}
-                body: |
-                    The aarch64-darwin binaries for this PR can be downloaded from:
-                    ```
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --output=gnosis-vpn-ctl
-                    ```
 
     merge-x86_64-darwin:
         name: Publish x86_64-darwin
         runs-on: macos-13
+        needs: delete-artifacts
         #if: github.event.pull_request.merged == true
 
         steps:
@@ -119,26 +133,13 @@ jobs:
                 mv results/bin/gnosis-vpn results/bin/gnosis-vpn-x86_64-darwin
                 mv results/bin/gnosis-vpn-ctl results/bin/gnosis-vpn-ctl-x86_64-darwin
                 gcloud config set artifacts/location europe-west3
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn:${pr_version}:gnosis-vpn-x86_64-darwin 2> /dev/null || true
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn-ctl:${pr_version}:gnosis-vpn-ctl-x86_64-darwin 2> /dev/null || true
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn     --source=results/bin/gnosis-vpn-x86_64-darwin
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn-ctl --source=results/bin/gnosis-vpn-ctl-x86_64-darwin
-
-            - name: Create comment
-              uses: peter-evans/create-or-update-comment@v4
-              with:
-                issue-number: ${{ github.event.pull_request.number }}
-                body: |
-                    The x86_64-darwin binaries for this PR can be downloaded from:
-                    ```
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --output=gnosis-vpn-ctl
-                    ```
-
 
     merge-linux:
         name: Publish ${{ matrix.architecture }}
         runs-on: self-hosted-hoprnet-bigger
+        needs: delete-artifacts
         strategy:
             matrix:
                 architecture:
@@ -173,19 +174,49 @@ jobs:
                 mv results/bin/gnosis-vpn results/bin/gnosis-vpn-${{ matrix.architecture }}
                 mv results/bin/gnosis-vpn-ctl results/bin/gnosis-vpn-ctl-${{ matrix.architecture }}
                 gcloud config set artifacts/location europe-west3
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn:${pr_version}:gnosis-vpn-${{ matrix.architecture }} 2> /dev/null || true
-                gcloud artifacts files delete --repository="rust-binaries" gnosis-vpn-ctl:${pr_version}:gnosis-vpn-ctl-${{ matrix.architecture }} 2> /dev/null || true
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn     --source=results/bin/gnosis-vpn-${{ matrix.architecture }}
                 gcloud artifacts generic upload --repository="rust-binaries" --version=${pr_version} --package=gnosis-vpn-ctl --source=results/bin/gnosis-vpn-ctl-${{ matrix.architecture }}
 
+    comment:
+        name: Comment PR
+        runs-on: self-hosted-hoprnet-small
+        needs:
+            - merge-aarch64-darwin
+            - merge-x86_64-darwin
+            - merge-linux
+        #if: github.event.pull_request.merged == true
+
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
+            - name: Get version
+              id: version
+              run: |
+                set -x
+                pr_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')-pr.${{ github.event.pull_request.number }}
+                echo "pr_version=$pr_version" >> ·GITHUB_OUTPUT
 
             - name: Create comment
               uses: peter-evans/create-or-update-comment@v4
               with:
                 issue-number: ${{ github.event.pull_request.number }}
                 body: |
-                    The ${{ matrix.architecture }} binaries for this PR can be downloaded from:
+                    The binaries for this PR can be downloaded from:
                     ```
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-${{ matrix.architecture }} --output=gnosis-vpn
-                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.binary.outputs.pr_version }}:gnosis-vpn-ctl-${{ matrix.architecture }} --output=gnosis-vpn-ctl
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-aarch64-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-linux --output=gnosis-vpn-ctl
+
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-x86_64-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-linux --output=gnosis-vpn-ctl
+
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-armv7l-linux --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-armv7l-linux --output=gnosis-vpn-ctl
+
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-aarch64-darwin --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-aarch64-darwin --output=gnosis-vpn-ctl
+
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-x86_64-darwin --output=gnosis-vpn
+                    gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries --file=gnosis-vpn:${{ steps.version.outputs.pr_version }}:gnosis-vpn-ctl-x86_64-darwin --output=gnosis-vpn-ctl
+
                     ```
