--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -159,6 +159,19 @@ jobs:
                   google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
                   install-sdk: 'true'
 
+            - name: Install Nix
+              uses: cachix/install-nix-action@v29
+              with:
+                  github_access_token: ${{ secrets.GITHUB_TOKEN }}
+                  nix_path: nixpkgs=channel:nixos-24.05
+
+            - uses: cachix/cachix-action@v15
+              with:
+                  name: hoprnet
+                  authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+              env:
+                  USER: runner
+
             - name: Build
               run: echo nix build .#gnosisvpn-${{ matrix.architecture }} -L
 
